# assignment_4

./: README.md
code/: README.md
code/solutions/: pyproject.toml
code/solutions/attack_1/: main.py
code/solutions/attack_2/: main.py
